feat: Updated unicorn_web to v2 architecture, implemented integration and Curl tests
